--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>this is my first github project</h1>
     <h2>look mama,i am using github</h2>
-    
+    <p>lets go for a party</p>
 </body>
 </html>
