--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>this is my first github project</h1>
     <h2>look mama,i am using github</h2>
     <p>lets go for a party</p>
+    <p>Talking from the second branch</p>
+    <p>this line in my second branch</p>
     <img src="flag.png">
 </body>
 </html>
