--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>lets go for a party</p>
     <p>Talking from the second branch</p>
     <p>this line in my second branch</p>
+    <p>code from second branch</p>
     <img src="flag.png">
 </body>
 </html>
