--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>this is my first github project</h1>
     <h2>look mama,i am using github</h2>
     <p>lets go for a party</p>
-    <p>Talking from the second branch</p>
+    <p>Talking from the updated in main  branch</p>
     <p>this line in my second branch</p>
     <p>code from second branch</p>
     <img src="flag.png">
