--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>unDocumented</title>
+    <title>upper Documented</title>
 </head>
 <body>
     <h1>this is my first github project</h1>
@@ -13,5 +13,6 @@
     <p>this line in my second branch</p>
     <p>code from second branch</p>
     <img src="flag.png">
+    <img src="shahid minar.jpg">
 </body>
 </html>
